--- a/detox/package.json
+++ b/detox/package.json
@@ -25,8 +25,7 @@
     "test": "npm run unit",
     "posttest": "cp coverage/lcov.info coverage/unit.lcov",
     "unit:watch": "jest --watch",
-    "prepublish": "npm run build",
-    "postinstall": "node scripts/postinstall.js"
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
